--- a/app/views/header.html
+++ b/app/views/header.html
@@ -42,7 +42,7 @@
               <input type="password" class="form-control" placeholder="Password">
             </div>
             <button ui-sref="journey" type="submit" class="btn btn-default hidden-sm hidden-md btn-block">Login</button>
-            <button ui-sref="journey" type="submit" class="btn btn-warning btn-block hidden-xs">Login</button>
+            <button ui-sref="journey" type="submit" class="btn login-btn btn-warning btn-block hidden-xs">Login</button>
           </form>
         </div>
         <div class="col-xs-12 hidden-xs">
