--- a/content/styles/css/styles.css
+++ b/content/styles/css/styles.css
@@ -685,12 +685,30 @@ font-weight: normal;
 .journey-overview-items .ft-item .fti-header .fa.active {
   color: #2DB2FF;
 }
+
+.journey-overview-items .ft-item .fti-header {
+  vertical-align: middle;
+}
+
 .journey-overview-items .ft-item .fti-number {
+
+  margin-left: 30px;
   color: white;
+  font-style: normal;
+  background-color: black;
+  border-radius: 50%;
+  padding: 8px;
+  width: 20px;
+  height: 20px;
 }
 .journey-overview-items .ft-item .fti-title {
   margin-left: 15px;
-  font-size: 30px;
+  font-size: 20px;
+  vertical-align: middle;
+  color: black;
+  background-color: white;
+  border: 0;
+  display: inline;
 }
 .journey-overview-items .ft-item .fti-body {
   margin-top: 5px;
@@ -1330,7 +1348,7 @@ footer .footer-images .aowp {
   border-top-color: #a8a8a8;
 }
 .journey-overview-items .ft-item .fti-body .contact .r-status {
-  font-weight: bold;
+  font-weight: normal;
 }
 .journey-overview-items .ft-item .fti-body .contact .r-status.open {
   color: green;
