--- a/app/views/journey-overview.html
+++ b/app/views/journey-overview.html
@@ -5,11 +5,11 @@
                 <!-- Cuisine Toolbar -->
                 <div class="food-types-widget">
                     <div class="food-type-buttons">
-                        <a ui-sref='journey-overview.american'><button data-category="american" class="btn btn-default category-button">American</button></a>
-                        <a ui-sref='journey-overview.italian'><button data-category="italian" class="btn btn-default category-button">Italian</button></a>
-                        <a ui-sref='journey-overview.mexican'><button data-category="mexican" class="btn btn-default category-button">Mexican</button></a>
-                        <a ui-sref='journey-overview.japanese'><button data-category="japanese" class="btn btn-primary category-button">Japanese</button></a>
-                        <a ui-sref='journey-overview.korean'><button data-category="korean" class="btn btn-primary category-button">Korean</button></a>
+                        <a ui-sref='journeyOverview.american'><button data-category="american" class="btn btn-default category-button">American</button></a>
+                        <a ui-sref='journeyOverview.italian'><button data-category="italian" class="btn btn-default category-button">Italian</button></a>
+                        <a ui-sref='journeyOverview.mexican'><button data-category="mexican" class="btn btn-default category-button">Mexican</button></a>
+                        <a ui-sref='journeyOverview.japanese'><button data-category="japanese" class="btn btn-primary category-button">Japanese</button></a>
+                        <a ui-sref='journeyOverview.korean'><button data-category="korean" class="btn btn-primary category-button">Korean</button></a>
                     </div>
 
                     <div class="food-type-dropdown">
@@ -34,16 +34,13 @@
                         </div>
                     </div>
 
-                    <div class="sort-control dropdown">
-
+                    <div class="sort-control dropdown hidden-sm hidden-md">
                         <button ng-model="selectedOption" class="btn btn-default dropdown-toggle" type="button" id="sort-by" data-toggle="dropdown" aria-expanded="false">
                             {{selectedOption.label}} <i class="fa fa-sort"></i>
                         </button>
-
                         <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="sort-by">
                             <li ng-repeat="o in options" ng-click="setOption(o)" value="{{o.value}}"><a>{{o.label}}</a></li>
                         </ul>
-
                     </div>
                 </div>
 
@@ -77,8 +74,8 @@
             </div>
         </div>
     </div>
-    <div ng-show="tasks" class="journey-overview-items">
+    <div ng-show="infos" class="journey-overview-items">
     	<h3>Try These Items</h3>
-        <!-- TODO: Insert Tasks-->
+        <item-list></item-list>
     </div>
 </div>
