--- a/app/views/journey-overview.html
+++ b/app/views/journey-overview.html
@@ -5,11 +5,11 @@
                 <!-- Cuisine Toolbar -->
                 <div class="food-types-widget">
                     <div class="food-type-buttons">
-                        <a ui-sref='journeyOverview.american' ng-click="fetchYelpData()"><button data-category="american" class="btn btn-default category-button">American</button></a>
-                        <a ui-sref='journeyOverview.italian' ng-click="fetchYelpData()"><button data-category="italian" class="btn btn-default category-button">Italian</button></a>
-                        <a ui-sref='journeyOverview.mexican' ng-click="fetchYelpData()"><button data-category="mexican" class="btn btn-default category-button">Mexican</button></a>
-                        <a ui-sref='journeyOverview.japanese' ng-click="fetchYelpData()"><button data-category="japanese" class="btn btn-primary category-button">Japanese</button></a>
-                        <a ui-sref='journeyOverview.korean' ng-click="fetchYelpData()"><button data-category="korean" class="btn btn-primary category-button">Korean</button></a>
+                        <a ui-sref='journeyOverview.american' ng-click="fetchYelpData('newamerican')"><button class="btn btn-default category-button">American</button></a>
+                        <a ui-sref='journeyOverview.italian' ng-click="fetchYelpData('italian')"><button class="btn btn-default category-button">Italian</button></a>
+                        <a ui-sref='journeyOverview.mexican' ng-click="fetchYelpData('mexican')"><button class="btn btn-default category-button">Mexican</button></a>
+                        <a ui-sref='journeyOverview.japanese' ng-click="fetchYelpData('japanese')"><button class="btn btn-primary category-button">Japanese</button></a>
+                        <a ui-sref='journeyOverview.korean' ng-click="fetchYelpData('korean')"><button class="btn btn-primary category-button">Korean</button></a>
                     </div>
 
                     <div class="food-type-dropdown">
