--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -15,7 +15,7 @@
 
       <div class="collapse navbar-collapse" id="menu">
         <ul class="nav navbar-nav">
-          <li><a ui-sref="journeyOverview">Journey</a>
+          <li><a ui-sref="journeyOverview.american" ng-click="fetchYelpData('newamerican')">Journey</a>
           </li>
           <li class="active"><a ui-sref="journey">My Progress</a>
           </li>
