Yelp changes and CSS style fixes

--- a/app/views/journey-overview.html
+++ b/app/views/journey-overview.html
@@ -5,11 +5,11 @@
                 <!-- Cuisine Toolbar -->
                 <div class="food-types-widget">
                     <div class="food-type-buttons" data-toggle="buttons-radio">
-                        <a ui-sref='journeyOverview.american'><button ng-click="fetchYelpData('newamerican')" data-toggle="button" class="btn btn-default category-button american">American</button></a>
-                        <a ui-sref='journeyOverview.italian'><button ng-click="fetchYelpData('italian')" data-toggle="button" class="btn btn-default category-button italian">Italian</button></a>
-                        <a ui-sref='journeyOverview.mexican'><button ng-click="fetchYelpData('mexican')" data-toggle="button" class="btn btn-default category-button mexican">Mexican</button></a>
-                        <a ui-sref='journeyOverview.japanese'><button ng-click="fetchYelpData('japanese')" data-toggle="button" class="btn btn-default category-button japanese">Japanese</button></a>
-                        <a ui-sref='journeyOverview.korean'><button ng-click="fetchYelpData('korean')" data-toggle="button" class="btn btn-default category-button korean">Korean</button></a>
+                        <a ui-sref='journeyOverview'><button ng-click="fetchYelpData('newamerican')" data-toggle="button" class="btn btn-default category-button newamerican">American</button></a>
+                        <a ui-sref='journeyOverview'><button ng-click="fetchYelpData('italian')" data-toggle="button" class="btn btn-default category-button italian">Italian</button></a>
+                        <a ui-sref='journeyOverview'><button ng-click="fetchYelpData('mexican')" data-toggle="button" class="btn btn-default category-button mexican">Mexican</button></a>
+                        <a ui-sref='journeyOverview'><button ng-click="fetchYelpData('japanese')" data-toggle="button" class="btn btn-default category-button japanese">Japanese</button></a>
+                        <a ui-sref='journeyOverview'><button ng-click="fetchYelpData('korean')" data-toggle="button" class="btn btn-default category-button korean">Korean</button></a>
                     </div>
 
                     <div class="food-type-dropdown">
