--- a/app/views/journey.html
+++ b/app/views/journey.html
@@ -7,9 +7,9 @@
         <div class="text-center journey-welcome ">
           <h3><span class="hidden-md">Welcome!...</span><span class="hidden-xs hidden-sm hidden-lg"> Welcome!</span>Choose a track to get started</h3>
         </div>
-        <a href="#">
-          <div ui-sref="journeyOverview.american" class="col-sm-6 col-md-4 food-type-container">
-            <!--<input type="hidden" ng-model="category" ng-init="category='newamerican'">-->
+        <a href="#" ng-click="fetchYelpData('newamerican')">
+          <div ui-sref="journeyOverview" class="col-sm-6 col-md-4 food-type-container">
+            <input type="hidden" ng-model="category" ng-init="category='newamerican'">
             <div class="journey-progress">
               <img src="../content/images/american-food-icon.png" alt="American Food"/>
               <span class="food-name-type">American</span>
@@ -24,8 +24,8 @@
           </div>
         </a>
 
-        <a href="#">
-          <div ui-sref="journeyOverview.italian" class="col-sm-6 col-md-4 food-type-container">
+        <a href="#" ng-click="fetchYelpData('italian')">
+          <div ui-sref="journeyOverview" class="col-sm-6 col-md-4 food-type-container">
             <input type="hidden" ng-model="category" value="italian">
             <div class="journey-progress">
               <img src="../content/images/italian-food-icon.png" alt="Italian Food"/>
@@ -42,8 +42,8 @@
           </div>
         </a>
 
-        <a href="#">
-          <div ui-sref="journeyOverview.mexican" class="col-sm-6 col-md-4 food-type-container">
+        <a href="#" ng-click="fetchYelpData('mexican')">
+          <div ui-sref="journeyOverview" class="col-sm-6 col-md-4 food-type-container">
             <input type="hidden" ng-model="category" value="mexican">
             <div class="journey-progress">
               <img src="../content/images/mexican-food-icon.png" alt="Mexican Food"/>
@@ -59,8 +59,8 @@
           </div>
         </a>
 
-        <a href="#">
-          <div ui-sref="journeyOverview.japanese" class="col-sm-6 col-md-4 food-type-container">
+        <a href="#" ng-click="fetchYelpData('japanese')">
+          <div ui-sref="journeyOverview" class="col-sm-6 col-md-4 food-type-container">
             <input type="hidden" ng-model="category" value="japanese">
             <div class="journey-progress">
               <img src="../content/images/japanese-food-icon.png" alt="Japanese Food"/>
@@ -78,8 +78,8 @@
         </a>
 
 
-        <a href="#">
-          <div ui-sref="journeyOverview.korean" class="col-sm-6 col-md-4 food-type-container">
+        <a href="#" ng-click="fetchYelpData('korean')">
+          <div ui-sref="journeyOverview" class="col-sm-6 col-md-4 food-type-container">
             <input type="hidden" ng-model="category" value="korean">
             <div class="journey-progress">
               <img src="../content/images/Chopsticks.png" alt="Korean Food"/>
